# Bevy-Asteroids

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  index.html  shell-wasm.nix  shell-windows.nix  shell.nix
.cargo/: config.toml
.github/workflows/: release.yaml
src/: lib.rs  main.rs
src/asteroid/: data.rs  mod.rs  systems.rs
src/audio/: asteroid.rs  bullet.rs  channels.rs  main_song.rs  mod.rs  ship.rs
src/bullet/: data.rs  mod.rs  systems.rs
src/explosion/: data.rs  mod.rs  systems.rs
src/ship/: data.rs  mod.rs  systems.rs
src/ui/: game_over.rs  game_ui.rs  main_menu.rs  mod.rs  setup.rs  systems.rs
